CSS and Stuff mostly done

--- a/server/public/matchHistory.html
+++ b/server/public/matchHistory.html
@@ -102,9 +102,9 @@
 													<div class="modal-body">
 														<div class="form-group form-group-revert">
 															<p> 
-																Removing the match will permenantly 
-																remove the match history and it will prevent
-																you from getting matched up with them again.
+																Removing the match will 
+                                                                eliminate their match history entry, and it will prevent
+                                                                you from getting matched up with them again.
 															</p>
 															<button
 																class="matchHistory-btn"
@@ -263,10 +263,10 @@
 																				>
 																				<input
 																					type="text"
-																					class="form-control"
+																					class="form-control matchHistory-fill-in"
 																					id="date1"
 																					aria-describedby="date1"
-																					placeholder="Enter a Valid Date"
+																					placeholder="DD/MM/YYYY"
 																				/>
 																				<label
 																					for="wType1"
@@ -275,7 +275,7 @@
 																				>
 																				<input
 																					type="text"
-																					class="form-control"
+																					class="form-control matchHistory-fill-in"
 																					id="wType1"
 																					aria-describedby="wType1"
 																					placeholder="Workout Type"
@@ -287,7 +287,7 @@
 																				</label>
 																				<input
 																					type="text"
-																					class="form-control"
+																					class="form-control matchHistory-fill-in"
 																					id="workout1"
 																					aria-describedby="workout1"
 																					placeholder="Enter workout"
@@ -412,6 +412,11 @@
 													</div>
 													<div class="modal-body">
 														<div class="form-group form-group-revert">
+															<p> 
+																Removing the match will 
+                                                                eliminate their match history entry, and it will prevent
+                                                                you from getting matched up with them again.
+															</p>
 															<button
 																class="matchHistory-btn"
 																data-bs-dismiss="modal"
@@ -568,10 +573,10 @@
 																				>
 																				<input
 																					type="text"
-																					class="form-control"
+																					class="form-control matchHistory-fill-in"
 																					id="date2"
 																					aria-describedby="date2"
-																					placeholder="Enter a Valid Date"
+																					placeholder="DD/MM/YYYY"
 																				/>
 
 																				<label
@@ -581,7 +586,7 @@
 																				>
 																				<input
 																					type="text"
-																					class="form-control"
+																					class="form-control matchHistory-fill-in"
 																					id="wType2"
 																					aria-describedby="wType2"
 																					placeholder="Workout Type"
@@ -594,7 +599,7 @@
 																				</label>
 																				<input
 																					type="text"
-																					class="form-control"
+																					class="form-control matchHistory-fill-in"
 																					id="workout2"
 																					aria-describedby="workout2"
 																					placeholder="Enter Workout"
@@ -718,6 +723,11 @@
 													</div>
 													<div class="modal-body">
 														<div class="form-group form-group-revert">
+															<p> 
+																Removing the match will 
+                                                                eliminate their match history entry, and it will prevent
+                                                                you from getting matched up with them again.
+															</p>
 															<button
 																class="matchHistory-btn"
 																data-bs-dismiss="modal"
@@ -873,10 +883,10 @@
 																				>
 																				<input
 																					type="text"
-																					class="form-control"
+																					class="form-control matchHistory-fill-in"
 																					id="date3"
 																					aria-describedby="date3"
-																					placeholder="Enter a Valid Date - DD/MM/YYYY"
+																					placeholder="DD/MM/YYYY"
 																				/>
 																				<label
 																					for="wType3"
@@ -885,7 +895,7 @@
 																				>
 																				<input
 																					type="text"
-																					class="form-control"
+																					class="form-control matchHistory-fill-in"
 																					id="wType3"
 																					aria-describedby="wType3"
 																					placeholder="Workout Type"
@@ -897,7 +907,7 @@
 																				</label>
 																				<input
 																					type="text"
-																					class="form-control"
+																					class="form-control matchHistory-fill-in"
 																					id="workout3"
 																					aria-describedby="workout3"
 																					placeholder="Enter workout"
