Front End for MatchHistory is 97% done

--- a/server/public/matchHistory.html
+++ b/server/public/matchHistory.html
@@ -32,7 +32,7 @@
 		<br/>
 
 		<h2 id="noWorkoutText1"> There Is Nothing Here</h2>
-		<h5 id ="noWorkoutText2"> Go Get A Match First!</h5>
+		<h5 id ="noWorkoutText2"> Go Back to the Last Page Or Go Find A Match!</h5>
 		<!-- Entry slot 1 -->
 		<div class="accordion w-75 mx-auto" id="previousMatchesOne">
 			<div class="accordion-item">
@@ -101,14 +101,15 @@
 													</div>
 													<div class="modal-body">
 														<div class="form-group form-group-revert">
-															<p> 
+															<h5> 
 																Removing the match will 
                                                                 eliminate their match history entry, and it will prevent
-                                                                you from getting matched up with them again.
-															</p>
+                                                                you from getting matched up with them again. 
+															</h5>
 															<button
 																class="matchHistory-btn"
 																data-bs-dismiss="modal"
+																id="noRemoval3"
 															>
 																No
 															</button>
@@ -159,9 +160,9 @@
 													</div>
 													<div class="modal-body">
 														<!-- Members prefered workout days - Filled in By matchHistory.js -->
-														<span
+														<h5
 															id="prefDate1"
-														></span>
+														></h5>
 													</div>
 												</div>
 											</div>
@@ -412,14 +413,15 @@
 													</div>
 													<div class="modal-body">
 														<div class="form-group form-group-revert">
-															<p> 
+															<h5> 
 																Removing the match will 
                                                                 eliminate their match history entry, and it will prevent
                                                                 you from getting matched up with them again.
-															</p>
+															</h5>
 															<button
 																class="matchHistory-btn"
 																data-bs-dismiss="modal"
+																id="noRemoval2"
 															>
 																No
 															</button>
@@ -470,9 +472,9 @@
 													</div>
 													<div class="modal-body">
 														<!-- Members prefered workout days - Filled in By matchHistory.js -->
-														<span
+														<h5
 															id="prefDate2"
-														></span>
+														></h5>
 													</div>
 												</div>
 											</div>
@@ -723,14 +725,15 @@
 													</div>
 													<div class="modal-body">
 														<div class="form-group form-group-revert">
-															<p> 
+															<h5> 
 																Removing the match will 
                                                                 eliminate their match history entry, and it will prevent
                                                                 you from getting matched up with them again.
-															</p>
+															</h5>
 															<button
 																class="matchHistory-btn"
 																data-bs-dismiss="modal"
+																id="noRemoval3"
 															>
 																No
 															</button>
@@ -780,9 +783,9 @@
 													</div>
 													<div class="modal-body">
 														<!-- Members prefered workout days - Filled in By matchHistory.js -->
-														<span
+														<h5
 															id="prefDate3"
-														></span>
+														></h5>
 													</div>
 												</div>
 											</div>
