more front end changes

--- a/server/public/matchHistory.html
+++ b/server/public/matchHistory.html
@@ -32,7 +32,7 @@
 		<br/>
 
 		<h2 id="noWorkoutText1"> There Is Nothing Here</h2>
-		<h5 id ="noWorkoutText2"> Go Back to the Last Page Or Go Find A Match!</h5>
+		<h5 id ="noWorkoutText2"> Go Find A Match!</h5>
 		<!-- Entry slot 1 -->
 		<div class="accordion w-75 mx-auto" id="previousMatchesOne">
 			<div class="accordion-item">
