MatchHistory HTML Validated

--- a/server/public/matchHistory.html
+++ b/server/public/matchHistory.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta charset="UTF-8" >
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" >
 		<title>Match History - UFit</title>
 
 		<link
@@ -10,8 +10,8 @@
 			rel="stylesheet"
 			integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
 			crossorigin="anonymous"
-		/>
-		<link href="./css/stylesheet.css" rel="stylesheet" />
+		>
+		<link href="./css/stylesheet.css" rel="stylesheet" >
 	</head>
 	<body id="matchHistory-background">
 		<div>
@@ -23,13 +23,13 @@
 							class="company-logo"
 							src="https://cdn-icons-png.flaticon.com/512/1053/1053916.png"
 							alt="company logo"
-					/></a>
+					></a>
 				</div>
 			</nav>
 		</div>
 
 		<h1 class="title"> Match History</h1>
-		<br/>
+		<br>
 
 		<h2 id="noWorkoutText1"> There Is Nothing Here</h2>
 		<h5 id ="noWorkoutText2"> Go Find A Match!</h5>
@@ -52,11 +52,11 @@
 								id="profilePic1"
 								src="#"
 								alt="Profile Image 1"
-							/>
+							>
 							<!-- Members name and contact info filled in by matchHistory.js -->
 							<span class="prev-matches-info" id="profile1">
 							</span>
-							<br />
+							<br>
 						</span>
 					</button>
 				</h2>
@@ -71,7 +71,8 @@
 							<div class="row">
 								<div class="col-2 text-center">
 									<div class="card-body">
-										<br /><br />
+										<br>
+										<br>
 										<!-- Remove Match Button 1 - brings a conformation modal -->
 										<button
 											class="matchHistory-btn"
@@ -109,7 +110,7 @@
 															<button
 																class="matchHistory-btn"
 																data-bs-dismiss="modal"
-																id="noRemoval3"
+																id="noRemoval1"
 															>
 																No
 															</button>
@@ -127,11 +128,11 @@
 												</div>
 											</div>
 										</div>
-										<br /><br />
+										<br>
+										<br>
 										<!-- preference button 1 - clicking brings preference modal-->
 										<button
 											value="1"
-											;
 											class="matchHistory-btn"
 											type="button"
 											id="availability1"
@@ -162,12 +163,13 @@
 														<!-- Members prefered workout days - Filled in By matchHistory.js -->
 														<h5
 															id="prefDate1"
-														></h5>
+														> Member Data</h5>
 													</div>
 												</div>
 											</div>
 										</div>
-										<br /><br />
+										<br> 
+										<br>
 
 										<!-- Member Rating Dropdown 1 created in matchHistory.js -->
 										<label for="selectRating1"
@@ -179,7 +181,7 @@
 											aria-readonly="true"
 											id="selectRating1"
 										></select>
-										<br />
+										<br>
 
 										<!-- Update Rating Button 1 -->
 										<button
@@ -215,7 +217,7 @@
 															class="card-img-top add-workout-icon"
 															src="https://www.freepnglogos.com/uploads/plus-icon/plus-icon-plus-sign-icon-vector-graphic-pixabay-7.png"
 															alt="Plus Symbol"
-														/>
+														>
 														<button
 															id="plus1"
 															class="btn btn-transparent stretched-link"
@@ -268,7 +270,7 @@
 																					id="date1"
 																					aria-describedby="date1"
 																					placeholder="DD/MM/YYYY"
-																				/>
+																				>
 																				<label
 																					for="wType1"
 																					>Workout
@@ -280,7 +282,7 @@
 																					id="wType1"
 																					aria-describedby="wType1"
 																					placeholder="Workout Type"
-																				/>
+																				>
 																				<label
 																					for="workout1"
 																				>
@@ -292,7 +294,7 @@
 																					id="workout1"
 																					aria-describedby="workout1"
 																					placeholder="Enter workout"
-																				/>
+																				>
 																				<small
 																					id="workoutTip1"
 																					class="form-text text-muted"
@@ -361,11 +363,11 @@
 								src="#"
 								alt="Profile Image 2"
 								id="profilePic2"
-							/>
+							>
 							<!-- Members name and contact info filled in by matchHistory.js -->
 							<span class="prev-matches-info" id="profile2">
 							</span>
-							<br />
+							<br>
 						</span>
 					</button>
 				</h2>
@@ -382,7 +384,8 @@
 									class="col-2 text-center align-self-center"
 								>
 									<div class="card-body">
-										<br /><br />
+										<br>
+										<br>
 
 										<!-- Remove Match Button 2 - brings a conformation modal -->
 										<button
@@ -440,7 +443,8 @@
 											</div>
 										</div>
 
-										<br /><br />
+										<br>
+										<br>
 
 										<!-- preference button 2 - clicking brings preference modal-->
 										<button
@@ -474,13 +478,14 @@
 														<!-- Members prefered workout days - Filled in By matchHistory.js -->
 														<h5
 															id="prefDate2"
-														></h5>
+														> Member Data</h5>
 													</div>
 												</div>
 											</div>
 										</div>
 
-										<br /><br />
+										<br>
+										<br>
 										<!-- Member Rating Dropdown 2 created in matchHistory.js -->
 										<label for="selectRating2"
 											>Rate This Workout Partner:</label
@@ -491,7 +496,7 @@
 											aria-readonly="true"
 											id="selectRating2"
 										></select>
-										<br />
+										<br>
 										<!-- Update Rating Button 2 -->
 										<button
 											type="button"
@@ -526,7 +531,7 @@
 															class="card-img-top add-workout-icon"
 															src="https://www.freepnglogos.com/uploads/plus-icon/plus-icon-plus-sign-icon-vector-graphic-pixabay-7.png"
 															alt="Plus Symbol"
-														/>
+														>
 														<button
 															id="plus2"
 															class="btn btn-transparent stretched-link"
@@ -579,7 +584,7 @@
 																					id="date2"
 																					aria-describedby="date2"
 																					placeholder="DD/MM/YYYY"
-																				/>
+																				>
 
 																				<label
 																					for="wType2"
@@ -592,7 +597,7 @@
 																					id="wType2"
 																					aria-describedby="wType2"
 																					placeholder="Workout Type"
-																				/>
+																				>
 
 																				<label
 																					for="workout2"
@@ -605,7 +610,7 @@
 																					id="workout2"
 																					aria-describedby="workout2"
 																					placeholder="Enter Workout"
-																				/>
+																				>
 																				<small
 																					id="workoutTip2"
 																					class="form-text text-muted"
@@ -674,11 +679,11 @@
 								src="#"
 								alt="Profile Image 3"
 								id="profilePic3"
-							/>
+							>
 							<!-- Members name and contact info filled in by matchHistory.js -->
 							<span class="prev-matches-info" id="profile3">
 							</span>
-							<br />
+							<br>
 						</span>
 					</button>
 				</h2>
@@ -695,7 +700,8 @@
 									class="col-2 text-center align-self-center"
 								>
 									<div class="card-body">
-										<br /><br />
+										<br>
+										<br>
 										<!-- Remove member button 3 brings up remove confirmation modal -->
 										<button
 											class="matchHistory-btn"
@@ -751,7 +757,8 @@
 												</div>
 											</div>
 										</div>
-										<br /><br />
+										<br>
+										<br>
 
 										<!-- preference button 3 - clicking brings preference modal-->
 										<button
@@ -785,13 +792,14 @@
 														<!-- Members prefered workout days - Filled in By matchHistory.js -->
 														<h5
 															id="prefDate3"
-														></h5>
+														> Member Data</h5>
 													</div>
 												</div>
 											</div>
 										</div>
 
-										<br /><br />
+										<br>
+										<br>
 										<!-- Member Rating Dropdown 3 created in matchHistory.js -->
 										<label for="selectRating3"
 											>Rate This Workout Partner:</label
@@ -802,7 +810,7 @@
 											aria-readonly="true"
 											id="selectRating3"
 										></select>
-										<br />
+										<br>
 										<!-- Update Rating Button 3 -->
 										<button
 											type="button"
@@ -837,7 +845,7 @@
 															class="card-img-top add-workout-icon"
 															src="https://www.freepnglogos.com/uploads/plus-icon/plus-icon-plus-sign-icon-vector-graphic-pixabay-7.png"
 															alt="Plus Symbol"
-														/>
+														>
 														<button
 															id="plus3"
 															class="btn btn-transparent stretched-link"
@@ -890,7 +898,7 @@
 																					id="date3"
 																					aria-describedby="date3"
 																					placeholder="DD/MM/YYYY"
-																				/>
+																				>
 																				<label
 																					for="wType3"
 																					>Workout
@@ -902,7 +910,7 @@
 																					id="wType3"
 																					aria-describedby="wType3"
 																					placeholder="Workout Type"
-																				/>
+																				>
 																				<label
 																					for="workout3"
 																				>
@@ -914,7 +922,7 @@
 																					id="workout3"
 																					aria-describedby="workout3"
 																					placeholder="Enter workout"
-																				/>
+																				>
 																				<small
 																					id="workoutTip3"
 																					class="form-text text-muted"
@@ -964,7 +972,7 @@
 			</div>
 		</div>
 
-		<br/>
+		<br>
 
 		
 		<div class="container">
@@ -988,7 +996,7 @@
 			<small class="copyright-text">&copy; Copyright 2022, UFit</small>
 		</footer>
 
-		<script type="module" src="./src/matchHistory.js" defer></script>
+		<script type="module" src="./src/matchHistory.js"></script>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
