--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta charset="utf-8" >
+		<meta name="viewport" content="width=device-width, initial-scale=1" >
 		<title>Home - UFit</title>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 			integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
 			crossorigin="anonymous"
-		/>
-		<link href="./css/stylesheet.css" rel="stylesheet" />
+		>
+		<link href="./css/stylesheet.css" rel="stylesheet" >
 	</head>
 	<body>
 		<div>
@@ -21,7 +21,7 @@
 							class="company-logo"
 							src="https://cdn-icons-png.flaticon.com/512/1053/1053916.png"
 							alt="company logo"
-					/></a>
+					></a>
 
 					<ul class="nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
@@ -44,7 +44,7 @@
 				<button
 					class="button-17"
 					id="findAFitLargeButton"
-					disabled="true"
+					disabled
 				>
 					Find A Fit!
 				</button>
@@ -67,7 +67,7 @@
 					src="https://cdn-icons-png.flaticon.com/512/3412/3412862.png"
 					rel="dumbbell"
 					alt="dumbbell"
-				/>
+				>
 			</div>
 		</section>
 		<section id="rating" class="info-sec">
@@ -77,7 +77,7 @@
 					class="info-pic"
 					src="https://www.freepnglogos.com/uploads/star-png/star-vector-png-transparent-image-pngpix-21.png"
 					alt="star"
-				/>
+				>
 				<p class="info-text">
 					Our app's 1-5 rating system is designed to give users an
 					easy way to rate the partners they work out with. The system
@@ -103,7 +103,7 @@
 					class="info-pic"
 					src="https://upload.wikimedia.org/wikipedia/en/5/5a/Black_question_mark.png"
 					alt="question mark"
-				/>
+				>
 			</div>
 		</section>
 		<script
