login html validated

--- a/server/public/login.html
+++ b/server/public/login.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta charset="UTF-8" >
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" >
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" >
 		<title>Login - UFit</title>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 			integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
 			crossorigin="anonymous"
-		/>
-		<link href="./css/stylesheet.css" rel="stylesheet" />
+		>
+		<link href="./css/stylesheet.css" rel="stylesheet" >
 	</head>
 
 	<body id="background">
@@ -27,12 +27,12 @@
 						id="email"
 						class="form-control field__input"
 						placeholder="my@email.com"
-					/>
+					>
 					<span class="field__label-wrap" aria-hidden="true">
 						<span id="email-label" class="field__label">Email</span>
 					</span>
 				</div>
-				<p id="email-error-text" hidden="true">Invalid email</p>
+				<p id="email-error-text" hidden>Invalid email</p>
 
 				<div class="field field_v1 login-creds">
 					<label for="password" class="ha-screen-reader form-label"
@@ -43,23 +43,23 @@
 						id="password"
 						class="form-control field__input"
 						placeholder="Password"
-					/>
+					>
 					<span class="field__label-wrap" aria-hidden="true">
 						<span id="password-label" class="field__label"
 							>Password</span
 						>
 					</span>
 				</div>
-				<p id="password-error-text" hidden="true">Invalid Password</p>
-				<p id="error-text" hidden="true">
+				<p id="password-error-text" hidden>Invalid Password</p>
+				<p id="error-text" hidden>
 					Invalid email/password combination
 				</p>
 			</form>
 			<button type="button" class="button-17 login-btn" id="login">
 				Login
 			</button>
-			<br />
-			<br />
+			<br>
+			<br>
 			<button
 				type="button"
 				class="text-primary"
@@ -96,7 +96,7 @@
 										id="firstName"
 										class="form-control field__input"
 										placeholder="Name"
-									/>
+									>
 									<span
 										class="field__label-wrap"
 										aria-hidden="true"
@@ -108,7 +108,7 @@
 										>
 									</span>
 								</div>
-								<p id="first-name-error-text" hidden="true">
+								<p id="first-name-error-text" hidden>
 									Please enter a first name
 								</p>
 								<div class="signup-input field field_v1">
@@ -122,7 +122,7 @@
 										id="lastName"
 										class="form-control field__input"
 										placeholder="Last Name"
-									/>
+									>
 									<span
 										class="field__label-wrap"
 										aria-hidden="true"
@@ -134,7 +134,7 @@
 										>
 									</span>
 								</div>
-								<p id="last-name-error-text" hidden="true">
+								<p id="last-name-error-text" hidden>
 									Please enter a last name
 								</p>
 								<div class="signup-input field field_v1">
@@ -148,7 +148,7 @@
 										id="newEmail"
 										class="form-control field__input"
 										placeholder="my@email.com"
-									/>
+									>
 									<span
 										class="field__label-wrap"
 										aria-hidden="true"
@@ -160,7 +160,7 @@
 										>
 									</span>
 								</div>
-								<p id="signup-email-error-text" hidden="true">
+								<p id="signup-email-error-text" hidden>
 									Invalid email
 								</p>
 								<div class="signup-input field field_v1">
@@ -174,7 +174,7 @@
 										id="newPassword"
 										class="form-control field__input"
 										placeholder="Password"
-									/>
+									>
 									<span
 										class="field__label-wrap"
 										aria-hidden="true"
@@ -188,7 +188,7 @@
 								</div>
 								<p
 									id="signup-password-error-text"
-									hidden="true"
+									hidden
 								>
 									Password must be 8 characters long, 1
 									uppercase, 1 lowercase, and 1 special/number
@@ -205,7 +205,7 @@
 										id="confirmPassword"
 										class="form-control field__input"
 										placeholder="Password"
-									/>
+									>
 									<span
 										class="field__label-wrap"
 										aria-hidden="true"
@@ -219,7 +219,7 @@
 								</div>
 								<p
 									id="confirm-password-error-text"
-									hidden="true"
+									hidden
 								>
 									Passwords dont match
 								</p>
