matchingPage html validated

--- a/server/public/matchingPage.html
+++ b/server/public/matchingPage.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta charset="utf-8" >
+		<meta name="viewport" content="width=device-width, initial-scale=1" >
 		<title>Find A Match - UFit</title>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 			integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
 			crossorigin="anonymous"
-		/>
-		<link href="./css/stylesheet.css" rel="stylesheet" />
+		>
+		<link href="./css/stylesheet.css" rel="stylesheet" >
 		<script
 			src="https://kit.fontawesome.com/39ea3817af.js"
 			crossorigin="anonymous"
@@ -24,7 +24,7 @@
 						class="company-logo"
 						src="https://cdn-icons-png.flaticon.com/512/1053/1053916.png"
 						alt="company logo"
-				/></a>
+				></a>
 			</div>
 		</nav>
 		<h1 class="title">Find a Fit!</h1>
