--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8" >
-		<meta name="viewport" content="width=device-width, initial-scale=1" >
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Home - UFit</title>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 			integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
 			crossorigin="anonymous"
-		>
-		<link href="./css/stylesheet.css" rel="stylesheet" >
+		/>
+		<link href="./css/stylesheet.css" rel="stylesheet" />
 	</head>
 	<body>
 		<div>
@@ -21,7 +21,7 @@
 							class="company-logo"
 							src="https://cdn-icons-png.flaticon.com/512/1053/1053916.png"
 							alt="company logo"
-					></a>
+					/></a>
 
 					<ul class="nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
@@ -41,11 +41,7 @@
 		<main class="homepage"></main>
 		<div class="row mt-2 mb-2 align-items-center">
 			<div class="col text-center">
-				<button
-					class="button-17"
-					id="findAFitLargeButton"
-					disabled
-				>
+				<button class="button-17" id="findAFitLargeButton" disabled>
 					Find A Fit!
 				</button>
 			</div>
@@ -55,19 +51,20 @@
 			<h2 class="info-title">UFit</h2>
 			<div class="info">
 				<p class="info-text">
-					Ufit is the ultimate workout partner finder. With Ufit, you
-					can search for people who have similar fitness goals and
-					interests, and connect with them to get fit together!
-					Whether you're looking for a running buddy, someone to lift
-					weights with, or just someone to sweat it out with, Ufit is
-					here to help you find your perfect match.
+					Ufit is the ultimate workout partner finder for students at
+					UMass. With Ufit, you can search for people who have similar
+					fitness goals and interests, and connect with them to get
+					fit together at the Rec! Whether you're looking for a
+					running buddy, someone to lift weights with, or just someone
+					to sweat it out with, Ufit is here to help you find your
+					perfect match.
 				</p>
 				<img
 					class="info-pic"
 					src="https://cdn-icons-png.flaticon.com/512/3412/3412862.png"
 					rel="dumbbell"
 					alt="dumbbell"
-				>
+				/>
 			</div>
 		</section>
 		<section id="rating" class="info-sec">
@@ -77,7 +74,7 @@
 					class="info-pic"
 					src="https://www.freepnglogos.com/uploads/star-png/star-vector-png-transparent-image-pngpix-21.png"
 					alt="star"
-				>
+				/>
 				<p class="info-text">
 					Our app's 1-5 rating system is designed to give users an
 					easy way to rate the partners they work out with. The system
@@ -92,18 +89,18 @@
 			<h2 class="info-title">How It Works</h2>
 			<div class="info">
 				<p class="info-text">
-					The app helps people find a workout partner by allowing them
-					to match with other users who are interested in working out.
-					The app also allows users to connect with other users who
-					have a lot of similarities and think they would work well
-					together. After working out with someone you can rate them
-					on a scale of 1-5.
+					The app helps people find a workout partner at the Rec by
+					allowing them to match with other users who are interested
+					in working out. The app also allows users to connect with
+					other users who have a lot of similarities and think they
+					would work well together. After working out with someone you
+					can rate them on a scale of 1-5.
 				</p>
 				<img
 					class="info-pic"
 					src="https://upload.wikimedia.org/wikipedia/en/5/5a/Black_question_mark.png"
 					alt="question mark"
-				>
+				/>
 			</div>
 		</section>
 		<script
