Minor bug fixes

--- a/server/public/profile.html
+++ b/server/public/profile.html
@@ -257,7 +257,7 @@
 							/>
 							<span class="field__label-wrap" aria-hidden="true">
 								<span class="field__label"
-									>Workouts Per Weeks</span
+									>Average Workout Length (in hours)</span
 								>
 							</span>
 						</div>
