--- a/server/public/profile.html
+++ b/server/public/profile.html
@@ -167,9 +167,10 @@
 						<div class="col text-center">
 							<img
 								id="profilePicturePreview"
-								hidden="true"
+								hidden="hidden"
 								class="profile-picture-preview"
-								src=""
+								src="https://www.nicepng.com/png/detail/73-730154_open-default-profile-picture-png.png"
+								alt="Profile Picture Preview"
 							/>
 						</div>
 					</div>
@@ -290,14 +291,14 @@
 									type="time"
 									id="startTime"
 									name="startTime"
-									disabled="true"
+									disabled="disabled"
 								/>
 								<label for="endTime">End Time:</label>
 								<input
 									type="time"
 									id="endTime"
 									name="endTime"
-									disabled="true"
+									disabled="disabled"
 								/>
 							</div>
 						</div>
